--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=[Pelp Solver]\:[%p] %d{yyyy-MM-dd HH\:mm\:ss} [%t]-[%c.%M](%F\:%L) %m%n
 
 # 正常日志配置
-log4j.appender.infofile=org.apache.log4j.FileAppender
+log4j.appender.infofile=org.apache.log4j.RollingFileAppender
 log4j.appender.infofile.File=logs/pelp-solver.log
 log4j.appender.infofile.Encoding=UTF-8
 log4j.appender.infofile.Append=true
@@ -15,7 +15,7 @@ log4j.appender.infofile.layout=org.apache.log4j.PatternLayout
 log4j.appender.infofile.layout.ConversionPattern=[Pelp Solver]\:[%p] %d{yyyy-MM-dd HH\:mm\:ss} [%t]-[%c.%M](%F\:%L) %m%n
 
 # 错误日志配置
-log4j.appender.errorfile=org.apache.log4j.FileAppender
+log4j.appender.errorfile=org.apache.log4j.RollingFileAppender
 log4j.appender.errorfile.File=logs/pelp-solver.err
 log4j.appender.errorfile.Encoding=UTF-8
 log4j.appender.errorfile.Append=true
