--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info,infofile,errorfile
+log4j.rootLogger=info,console,infofile,errorfile
 
 # 控制台日志配置
 log4j.appender.console=org.apache.log4j.ConsoleAppender
